--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -28,10 +28,10 @@
     <p class="second">Already using Slack? <a href="#">Sign in</a></p>
   </header>
   <main>
-    <div>
+    <div class="logos">
       <h2>You´re in good company</h2>
-      <p>Millions of people around the world have already made Slack the place where their work happens.</p>
-      <button>DISCOVER WHY</button>
+      <p class="first">Millions of people around the world have already made Slack the place where their work happens.</p>
+      <button class="discover">DISCOVER WHY</button>
       <img src="./images/airbnb-logo.png" alt="">
       <img src="./images/capital-one-logo.png" alt="">
       <img src="./images/harvard-logo.png" alt="">
@@ -39,10 +39,10 @@
       <img src="./images/oracle-logo.png" alt="">
       <img src="./images/ticketmaster-logo.png" alt="">
     </div>
-    <div>
+    <div class="try">
       <p>Try it for free</p>
-      <p>Already using Slack? <a href="">Sign in</a></p>
-      <button type="button" name="button">GET STARTED</button>
+      <p class="second">Already using Slack? <a href="">Sign in</a></p>
+      <button type="button" name="button" class="start">GET STARTED</button>
     </div>
   </main>
   <footer>
