--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -83,21 +83,25 @@
           <li>Slack at Work</li>
           <li>Slack Fund</li>
         </ul>
-      </div>           
+      </div>
     </div>
-    <div>
+    <div class="container-3">
       <ul>
         <li>Status</li>
         <li>Privacy & Terms</li>
         <li>Contact Us</li>
       </ul>
-      <div>
-        <img src="./images/us-flag.png" alt="">
-        <span>English (US)</span>
-        <i class="fa fa-chevron-down" aria-hidden="true"></i>
-        <i class="fa fa-twitter" aria-hidden="true"></i>
-        <i class="fa fa-facebook" aria-hidden="true"></i>
-        <i class="fa fa-youtube-play" aria-hidden="true"></i>
+      <div class="final">
+        <div class="language">
+          <img src="./images/us-flag.png" alt="">
+          <span>English (US)</span>
+          <i class="fa fa-chevron-down" aria-hidden="true"></i>          
+        </div>
+        <div class="social">
+          <i class="fa fa-twitter" aria-hidden="true"></i>
+          <i class="fa fa-facebook" aria-hidden="true"></i>
+          <i class="fa fa-youtube-play" aria-hidden="true"></i>
+        </div>
       </div>
     </div>
   </footer>
