Done with another range

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -32,12 +32,14 @@
       <h2>You´re in good company</h2>
       <p class="first">Millions of people around the world have already made Slack the place where their work happens.</p>
       <button class="discover">DISCOVER WHY</button>
-      <img src="./images/airbnb-logo.png" alt="">
-      <img src="./images/capital-one-logo.png" alt="">
-      <img src="./images/harvard-logo.png" alt="">
-      <img src="./images/los-angeles-times-logo.png" alt="">
-      <img src="./images/oracle-logo.png" alt="">
-      <img src="./images/ticketmaster-logo.png" alt="">
+      <div class="image-cont">
+        <img src="./images/airbnb-logo.png" alt="">
+        <img src="./images/capital-one-logo.png" alt="">
+        <img src="./images/harvard-logo.png" alt="">
+        <img src="./images/los-angeles-times-logo.png" alt="">
+        <img src="./images/oracle-logo.png" alt="">
+        <img src="./images/ticketmaster-logo.png" alt="">
+      </div>      
     </div>
     <div class="try">
       <p class="first">Try it for free</p>
